<resources>
    <string name="app_name">Oncart</string>
    <string name="find_your_ngadget">Find your \nGadget</string>
    <string name="get_started">Get Started</string>
    <string name="get_your_fav_clothes">Get your Favorite Clothes</string>
    <string name="get_started_with_onCart">Get Started with Oncart</string>
    <string name="begin_your_journey_with_oncart">Begin your Journey with Oncart</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="laptops">Laptops</string>
    <string name="men_top">Men TopWears</string>
    <string name="men_top_wear">Men Topwear</string>
    <string name="men_bottom_wear">Men Bottomwear</string>
    <string name="men_bottom">Men BottomWears</string>
    <string name="Televisions">Televisions</string>
    <string name="Television">Television</string>
    <string name="remove_from_cart">Remove from Cart</string>
    <string name="password">Password</string>
    <string name="or">Or continue with</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_with_phone">Continue with Phone</string>
    <string name="new_user">New User?</string>
    <string name="web_client_id">309260293617-jmqbv612sgfrm7d8hi9nb4n0sk2i6099.apps.googleusercontent.com</string>
    <string name="register_now">Register now</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="liked">Liked</string>
    <string name="account">Account</string>
    <string name="error_msg">Failed, try again in some time or use alternate method of authentication</string>
    <string name="welcome">Welcome</string>
    <string name="mobiles">Mobiles</string>
    <string name="mobile">Mobile</string>
    <string name="our_products">Our Products</string>
    <string name="your_internet_connection_is_currently_n_not_available_please_check_or_try_again">Your internet connection is currently\n not available please check or try again.</string>
    <string name="try_again">Try again</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="oneplus_tv">Oneplus TV</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity</string>
    <string name="something_went_wrong">Something went wrong, please try again later...</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="address_43_oxford_road_m134gr_manchester_uk">Address: 43 Oxford Road M134GR Manchester, UK</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="shopping_address">Shopping Address</string>
    <string name="order_history">Order history</string>
    <string name="my_cart">My Cart</string>
    <string name="rosina_doe">Rosina Doe</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="_91_9767857572">+91 9767857572</string>
    <string name="change">change</string>
    <string name="payment_method">Payment Method</string>
    <string name="dots">.... .... ....</string>
    <string name="_1234">1234</string>
    <string name="total">Total</string>
    <string name="_1500">1500</string>
    <string name="_1575">₹1575</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="your_phone">Your Phone!</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_number">Enter number</string>
    <string name="a_6_digit_otp_will_be_sent_via_sms_to_verify_nyour_mobile_number">A 6 digit OTP will be sent via SMS to verify\nyour mobile number</string>
    <string name="continue_">Continue</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_you_recieved_to">Enter the OTP you recieved to</string>
    <string name="_5">5</string>
    <string name="verify">Verify</string>
    <string name="checkout">Checkout</string>
    <string name="products">Products:</string>
    <string name="_5_">5</string>
    <string name="my_credit_card">My credit card</string>
    <string name="_04_26">04/26</string>
    <string name="pay_now">Pay now</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="are_you_sure_you_want_to_clear_cart">Are you sure, you want to clear cart</string>
    <string name="clear_cart">Clear cart</string>
    <string name="transaction_in_process">Transaction in process</string>
    <string name="please_wait">Please wait...</string>
    <string name="transaction">transaction_frag</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="shop_more">Shop more</string>
    <string name="list_of_product_items">list_of_product_items</string>
    <string name="mi_tv">MI TV</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="enter_your_name">Enter your name...</string>
    <string name="save">Save</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="update_profile">update_profile</string>
    <string name="found_6_results">Found 0 results</string>
    <string name="skip_">Skip for now</string>
    <string name="from_account">FROM_ACCOUNT</string>
    <string name="add_address">Add Address</string>
    <string name="no_address_added">No address added...</string>
    <string name="you_can_add_maximum_of_3_addresses">You can add maximum of 3 Addresses.</string>
    <string name="edit">Edit</string>
    <string name="enter_your_address">Enter your Address…</string>
    <string name="enter_your_name_">Enter your name</string>
    <string name="enter_your_address_">Enter your address</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_your_phone_">Enter your phone...</string>
    <string name="no_shipping_information_available">No Shipping Information available</string>
    <string name="check_for">check_for</string>
    <string name="no_address_added_">No Address added...</string>

</resources>