<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmAndPay"
        >
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvConfirmAndPay"
        android:text="@string/confirm_and_pay"
        android:textSize="16sp"
        android:layout_marginTop="33dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/cvCard"
        android:fontFamily="@font/spartanmedium500"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProductsHeader"
        android:text="@string/products"
        android:textSize="14sp"
        android:textColor="?colorControlNormal"
        app:layout_constraintTop_toTopOf="@id/tvConfirmAndPay"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/tvProductsValue"
        android:fontFamily="@font/spartanreg"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProductsValue"
        android:text="@string/_5_"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/tvProductsHeader"
        app:layout_constraintBottom_toBottomOf="@id/tvProductsHeader"
        app:layout_constraintEnd_toEndOf="@id/cvCard"
        android:fontFamily="@font/spartanreg"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="325dp"
        android:layout_height="175dp"
        app:cardCornerRadius="8dp"
        android:id="@+id/cvCard"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/detail_fragment_top"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmAndPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMyCreditCard"
                android:layout_marginStart="4dp"
                android:text="@string/my_credit_card"
                app:layout_constraintTop_toTopOf="@id/ivCard"
                app:layout_constraintBottom_toBottomOf="@id/ivCard"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/spartanmedium500"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/visa"
                android:id="@+id/ivCard"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDots"
                android:text="@string/dots"
                android:textSize="45sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvMyCreditCard"
                app:layout_constraintStart_toStartOf="@id/tvMyCreditCard"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv1234"
                android:text="@string/_1234"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/spartanreg"
                app:layout_constraintTop_toTopOf="@id/tvDots"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toEndOf="@id/tvDots"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvName"
                android:textSize="13sp"
                android:layout_marginTop="20dp"
                android:textColor="?colorControlNormal"
                android:textStyle="bold"
                android:text="@string/rosina_doe"
                app:layout_constraintStart_toStartOf="@id/tvMyCreditCard"
                app:layout_constraintTop_toBottomOf="@id/tv1234"
                android:fontFamily="@font/spartanreg"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvExpiry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvName"
                android:text="@string/_04_26"
                android:textColor="?colorControlNormal"
                android:textStyle="bold"
                android:fontFamily="@font/spartanreg"
                android:textSize="12sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/cvCard"
        app:layout_constraintTop_toBottomOf="@id/cvCard"
        app:layout_constraintEnd_toEndOf="@id/cvCard"
        android:id="@+id/payContainer"
        android:padding="10dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotalHeader"
            android:textColor="@color/black"
            android:fontFamily="@font/spartanreg"
            android:textSize="15sp"
            android:text="@string/total"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tvTotalHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTotalHeader"
            app:layout_constraintBottom_toBottomOf="@id/tvTotalHeader"
            android:textSize="20sp"
            android:id="@+id/tvPriceValue"
            android:textColor="@color/app_blue"
            android:textStyle="bold"
            android:text="@string/_1575"
            android:layout_marginStart="25dp"
            android:gravity="end"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/btnPayNow"
            app:layout_constraintTop_toBottomOf="@id/tvTotalHeader"
            app:layout_constraintEnd_toEndOf="@id/tvPriceValue"
            app:layout_constraintStart_toStartOf="@id/tvTotalHeader"
            android:layout_marginTop="30dp"
            android:text="@string/pay_now"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:cornerRadius="12dp"
            android:fontFamily="@font/spartanmedium500"
            android:backgroundTint="@color/app_blue"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>