<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
   <com.google.android.material.button.MaterialButton
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/btnRetry"
       app:cornerRadius="4dp"
       android:padding="15dp"
       android:layout_marginHorizontal="95dp"
       android:backgroundTint="@color/app_blue"
       android:textColor="@color/white"
       android:text="@string/try_again"
       android:textAllCaps="false"
       android:textSize="15sp"
       android:textStyle="bold"
       android:layout_marginTop="25dp"
       app:layout_constraintTop_toBottomOf="@id/tvDetailError"
       />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tvDetailError"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/your_internet_connection_is_currently_n_not_available_please_check_or_try_again"
        android:textSize="14sp"
        android:fontFamily="@font/spartanreg"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tvDetailError"
        android:id="@+id/tvError"
        android:text="@string/no_internet_connection"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/spartaneemibold600"/>

    <ImageView
        android:layout_width="145dp"
        android:layout_height="165dp"
        android:id="@+id/neImage"
        android:src="@drawable/wireless"
        app:layout_constraintBottom_toTopOf="@id/tvError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>