<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"
        android:clickable="true"
        android:focusable="true"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="7dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toStartOf="@id/ivClose"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEnterName"
                    android:text="@string/enter_your_name_"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/app_blue"
                    android:textStyle="bold"
                    android:fontFamily="@font/spartanreg"
                   />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/ivClose"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvEnterName"
                    android:src="@drawable/close"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:id="@+id/cvName"
                    app:cardCornerRadius="30dp"
                    app:strokeColor="@color/app_blue"
                    app:strokeWidth="2dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/tvEnterName"
                    android:focusableInTouchMode="true"
                    app:layout_constraintStart_toStartOf="@id/tvEnterName"
                    app:layout_constraintTop_toBottomOf="@id/tvEnterName"
                    >
                    <EditText
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_marginEnd="20dp"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:theme="@style/et"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:textSize="12sp"
                        android:id="@+id/etName"
                        android:hint="@string/enter_your_name"
                        android:textColor="@color/black"
                        android:fontFamily="@font/spartanreg"
                        android:layout_marginStart="20dp"/>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEnterAddress"
                    android:text="@string/enter_your_address_"
                    app:layout_constraintTop_toBottomOf="@id/cvName"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/app_blue"
                    android:textStyle="bold"
                    android:fontFamily="@font/spartanreg"
                    />
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:id="@+id/cvAddress"
                    app:cardCornerRadius="30dp"
                    app:strokeColor="@color/app_blue"
                    app:strokeWidth="2dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/tvEnterName"
                    android:focusableInTouchMode="true"
                    app:layout_constraintStart_toStartOf="@id/tvEnterName"
                    app:layout_constraintTop_toBottomOf="@id/tvEnterAddress"
                    >
                    <EditText
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_marginEnd="20dp"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:theme="@style/et"
                        android:maxLength="35"
                        android:maxLines="1"
                        android:textSize="12sp"
                        android:id="@+id/etAddress"
                        android:hint="@string/enter_your_address"
                        android:textColor="@color/black"
                        android:fontFamily="@font/spartanreg"
                        android:layout_marginStart="20dp"/>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEnterPhone"
                    android:text="@string/enter_your_phone"
                    app:layout_constraintTop_toBottomOf="@id/cvAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/app_blue"
                    android:textStyle="bold"
                    android:fontFamily="@font/spartanreg"
                    />
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:id="@+id/cvPhone"
                    app:cardCornerRadius="30dp"
                    app:strokeColor="@color/app_blue"
                    app:strokeWidth="2dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="@id/tvEnterName"
                    android:focusableInTouchMode="true"
                    app:layout_constraintStart_toStartOf="@id/tvEnterName"
                    app:layout_constraintTop_toBottomOf="@id/tvEnterPhone"
                    >
                    <EditText
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_marginEnd="20dp"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:theme="@style/et"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textSize="12sp"
                        android:id="@+id/etPhone"
                        android:hint="@string/enter_your_phone_"
                        android:textColor="@color/black"
                        android:fontFamily="@font/spartanreg"
                        android:layout_marginStart="20dp"/>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    app:layout_constraintStart_toStartOf="@id/tvEnterName"
                    app:layout_constraintEnd_toEndOf="@id/tvEnterName"
                    app:cornerRadius="5dp"
                    app:layout_constraintTop_toBottomOf="@id/cvPhone"
                    android:layout_marginTop="25dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:id="@+id/btnSave"
                    android:fontFamily="@font/spartanreg"
                    android:backgroundTint="@color/app_blue"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
